describe every text marked for translation

--- a/src/app/shared/components/company-form/company-form.component.html
+++ b/src/app/shared/components/company-form/company-form.component.html
@@ -8,12 +8,14 @@
 <form [formGroup]="formGroup">
   <mat-form-field class="idNumber">
     <input matInput formControlName="idNumber"
-      placeholder="Rut Empresa" i18n-placeholder
+      placeholder="Rut de empresa"
+      i18n-placeholder="Name of field for company identification number"
       (blur)="onTouched()" />
   </mat-form-field>
   <mat-form-field class="name">
     <input matInput formControlName="name"
-      placeholder="Razón Social" i18n-placeholder
+      placeholder="Razón social"
+      i18n-placeholder="Name of field for official, complete company name"
       (blur)="onTouched()" />
   </mat-form-field>
 </form>
