--- a/src/app/shared/components/image-upload-form/image-upload-form.component.html
+++ b/src/app/shared/components/image-upload-form/image-upload-form.component.html
@@ -7,7 +7,7 @@
 
 <form [formGroup]="formGroup" (submit)="onSubmit()"
   class="upload-image" >
-  <h2 i18n>Subir Imágenes</h2>
+  <h2 i18n="Title of form to upload images">Subir Imágenes</h2>
   <mat-form-field appearance="fill">
     <app-file-upload formControlName="files"
       [disabled]="uploading$ | async"
@@ -23,9 +23,9 @@
     <button mat-button mat-raised-button
       [disabled]="formGroup.invalid || (uploading$ | async)"
       type="submit"
-      i18n>Aceptar</button>
+      i18n="confirm|Label for action button to accept and proceed with upload">Aceptar</button>
     <button mat-button mat-raised-button
       type="button" color="warn"
-      i18n>Cancelar</button>
+      i18n="cancel|Label for action button to cancel upload">Cancelar</button>
   </div>
 </form>
