--- a/src/app/store/components/header/login-button/store-header-login-button.component.html
+++ b/src/app/store/components/header/login-button/store-header-login-button.component.html
@@ -6,7 +6,8 @@
 -->
 
 <button mat-button type="button"
-  title="Aún no has iniciado sesión" i18n-title
+  aria-label="Iniciar sesión"
+  i18n-aria-label="log in|Label for action button to prompt a login"
   (click)="onClickLogIn()">
   <mat-icon>person_outline</mat-icon>
 </button>
