--- a/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.html
+++ b/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.html
@@ -5,24 +5,24 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h3 mat-dialog-title i18n>Identificación requerida</h3>
-<p i18n>Para proceder a su carrito, debe iniciar sesión, registrarse, o ingresar sus datos de facturación.</p>
-<p i18n>Por favor, elija una de las tres a continuación:</p>
+<h3 mat-dialog-title i18n="Title of dialog prompt to indicate users that some sort of ID is required">Identificación requerida</h3>
+<p i18n="Label to instruct users that they must log in, register or indicate some personal info to proceed">Para proceder a su carrito, debe iniciar sesión, registrarse, o ingresar sus datos de facturación.</p>
+<p i18n="Label to instruct users to choose one option out of three">Por favor, elija una de las tres a continuación:</p>
 <div class="actions">
   <button mat-button mat-raised-button type="button"
     (click)="onClickOption('login')">
-    <span i18n>Iniciar sesión</span>
+    <span i18n="log in|Label for action button to prompt login">Iniciar sesión</span>
     <mat-icon>verified_user</mat-icon>
   </button>
   <button mat-button mat-raised-button type="button"
     (click)="onClickOption('register')">
-    <span i18n>Registrarme</span>
+    <span i18n="Label for action button to prompt registration">Registrarme</span>
     <mat-icon>person_add</mat-icon>
   </button>
   <button mat-button mat-raised-button type="button"
     (click)="onClickOption('guest')">
-    <span i18n>Continuar sin cuenta</span>
+    <span i18n="Label for action button to prompt a guest, temporary login">Continuar sin cuenta</span>
     <mat-icon>remove_moderator</mat-icon>
   </button>
 </div>
-<p class="hint" i18n>Si desea cerrar este diálogo, haga clic fuera de él.</p>
+<p class="hint" i18n="Label to hint users to click away from dialog to close it">Si desea cerrar este diálogo, haga clic fuera de él.</p>
