--- a/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.html
+++ b/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.html
@@ -10,14 +10,16 @@
   <div class="quantity-wrapper">
     <button type="button" class="decrease-quantity"
       mat-button mat-icon-button
-      title="Quitar unidad" i18n-title
+      aria-label="Quitar unidad"
+      i18n-aria-label="remove product unit|Label for action button to take one (1) unit of a product away from the shopping cart"
       [disabled]="notInCart"
       (click)="onClickDecrease()">
       <mat-icon>remove</mat-icon>
     </button>
     <span class="quantity">{{ units }}</span>
     <button type="button" class="increase-quantity"
-      title="Agregar unidad" i18n-title
+      aria-label="Agregar unidad"
+      i18n-aria-label="add product unit|Label for action button to include one (1) more unit of a product in the shopping cart"
       mat-button mat-icon-button
       (click)="onClickIncrease()">
       <mat-icon>add</mat-icon>
