--- a/src/app/shared/components/person-form/person-form.component.html
+++ b/src/app/shared/components/person-form/person-form.component.html
@@ -9,31 +9,37 @@
 
   <mat-form-field class="firstName">
     <input matInput formControlName="firstName"
-      placeholder="Nombres" i18n-placeholder />
+      placeholder="Nombres"
+      i18n-placeholder="Name of field for the complete first name of a person" />
   </mat-form-field>
 
   <mat-form-field class="lastName">
     <input matInput formControlName="lastName"
-      placeholder="Appelidos" i18n-placeholder />
+      placeholder="Apellidos"
+      i18n-placeholder="Name of field for the complete last name of a person" />
   </mat-form-field>
 
   <mat-form-field class="idNumber">
     <input matInput formControlName="idNumber"
-      placeholder="Rut" i18n-placeholder />
+      placeholder="Rut"
+      i18n-placeholder="Name of field for the identification number of a person" />
   </mat-form-field>
 
   <mat-form-field class="email">
     <input matInput formControlName="email"
-      placeholder="Email" i18n-placeholder />
+      placeholder="Email"
+      i18n-placeholder="Name of field for the email address of a person" />
   </mat-form-field>
 
   <mat-form-field class="phone1">
     <input matInput formControlName="phone1"
-      placeholder="Teléfono 1" i18n-placeholder />
+      placeholder="Teléfono 1"
+      i18n-placeholder="Name of field for the main phone number of a person" />
   </mat-form-field>
 
   <mat-form-field class="phone2">
     <input matInput formControlName="phone2"
-      placeholder="Teléfono 2" i18n-placeholder />
+      placeholder="Teléfono 2"
+      i18n-placeholder="Name of field for the alternative phone number of a person" />
   </mat-form-field>
 </form>
