--- a/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
+++ b/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
@@ -7,19 +7,21 @@
 
 <mat-expansion-panel>
   <mat-expansion-panel-header>
-    <mat-panel-title i18n>Filtrar productos por...</mat-panel-title>
+    <mat-panel-title
+      i18n="Title of panel to select conditions to filter products by">Filtrar productos</mat-panel-title>
   </mat-expansion-panel-header>
   <form [formGroup]="formGroup">
 
     <mat-form-field>
       <mat-select formControlName="category"
-        placeholder="Categoría" i18n-placeholder>
+        placeholder="Categoría"
+        i18n-placeholder="Name of field for filtering products by selected category">
         <mat-option *ngFor="let category of (categories$ | async)"
           [value]="category.code">{{ category.name }}</mat-option>
       </mat-select>
       <button matSuffix mat-button mat-icon-button *ngIf="category.value"
-        aria-label="Limpiar" i18n-aria-label
-        title="Limpiar" i18n-title
+        aria-label="Limpiar"
+        i18n-aria-label="(If selected) Label for action button to clear category off filtering conditions"
         (click)="onClickResetProductCategory($event)">
         <mat-icon>close</mat-icon>
       </button>
@@ -27,7 +29,8 @@
 
     <mat-form-field>
       <input matInput formControlName="name"
-        placeholder="Nombre de Producto" i18n-placeholder />
+        placeholder="Nombre"
+        i18n-placeholder="Name of field for filtering products by partial name" />
     </mat-form-field>
   </form>
 </mat-expansion-panel>
