--- a/src/app/shared/components/product-form/product-form.component.html
+++ b/src/app/shared/components/product-form/product-form.component.html
@@ -15,17 +15,20 @@
 
   <mat-form-field class="barcode">
     <input matInput formControlName="barcode"
-      placeholder="Código" i18n-placeholder />
+      placeholder="Código"
+      i18n-placeholder="product code field|Name of field for product code" />
   </mat-form-field>
 
   <mat-form-field class="name">
     <input matInput formControlName="name"
-      placeholder="Nombre" i18n-placeholder />
+      placeholder="Nombre"
+      i18n-placeholder="product name field|Name of field for product name" />
   </mat-form-field>
 
   <mat-form-field class="category">
     <mat-select formControlName="category"
-      placeholder="Familia de Producto" i18n-placeholder>
+      placeholder="Categoría"
+      i18n-placeholder="product category field|Name of field for product category">
       <mat-option *ngFor="let f of (categories$ | async)"
         [value]="f.code">{{ f.name }}</mat-option>
     </mat-select>
@@ -33,21 +36,25 @@
 
   <mat-form-field class="price">
     <input matInput formControlName="price"
-      placeholder="Precio" i18n-placeholder />
+      placeholder="Precio"
+      i18n-placeholder="product price field|Name of field for product price" />
   </mat-form-field>
 
   <!-- <mat-form-field class="stock">
     <input matInput formControlName="stock"
-      placeholder="Stock Actual" i18n-placeholder />
+      placeholder="Stock Actual"
+      i18n-placeholder="product stock field|Name of field for product units currently held in stock" />
   </mat-form-field> -->
 
   <!-- <mat-form-field class="cStock">
     <input matInput formControlName="criticalStock"
-      placeholder="Stock crítico" i18n-placeholder />
+      placeholder="Stock crítico"
+      i18n-placeholder="product low stock field|Name of field for lowest allowed product units treshold before raising alert of low stock" />
   </mat-form-field> -->
 
   <mat-form-field class="desc">
     <textarea matInput formControlName="description"
-      placeholder="Descripción" i18n-placeholder></textarea>
+      placeholder="Descripción"
+      i18n-placeholder="product description field|Name of field for product description"></textarea>
   </mat-form-field>
 </form>
