--- a/src/app/shared/dialogs/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/dialogs/confirmation-dialog/confirmation-dialog.component.html
@@ -11,10 +11,10 @@
   <button mat-button mat-raised-button
     type="button"
     [mat-dialog-close]="true"
-    i18n>Sí</button>
+    i18n="yes|Label for action button to answer positively">Sí</button>
   <button mat-button mat-raised-button
     type="button"
     [mat-dialog-close]="false"
     autofocus
-    i18n>No</button>
+    i18n="no|Label for action button to answer negatively">No</button>
 </mat-dialog-actions>
