--- a/src/app/store/components/billing-details-form/store-billing-details-form.component.html
+++ b/src/app/store/components/billing-details-form/store-billing-details-form.component.html
@@ -7,7 +7,8 @@
 
 <form [formGroup]="formGroup">
   <mat-radio-group formControlName="sellType"
-    aria-label="Selecciona el tipo de comprobante" i18n-aria-label>
+    aria-label="Selecciona el tipo de comprobante"
+    i18n-aria-label="Label for group of choices to select billing type from">
     <mat-radio-button *ngFor="let option of typesOptions"
       [value]="option"
       (blur)="onTouched()">{{ types[option] }}</mat-radio-button>
@@ -15,6 +16,7 @@
   <app-company-form #companyForm formControlName="company">
   </app-company-form>
   <app-addresses-editor-form #addressForm formControlName="address"
-    placeholder="Dirección de facturación" i18n-placeholder>
+    placeholder="Dirección de facturación"
+    i18n-placeholder="Name of field for selecting a billing address">
   </app-addresses-editor-form>
 </form>
