--- a/src/app/store/components/cart-contents-table/store-cart-contents-table.component.html
+++ b/src/app/store/components/cart-contents-table/store-cart-contents-table.component.html
@@ -8,7 +8,7 @@
 <table mat-table [dataSource]="details$">
   <ng-container matColumnDef="product">
     <th mat-header-cell *matHeaderCellDef>
-      <span i18n>Producto</span>
+      <span i18n="product name header|Name of table header for name of product">Producto</span>
     </th>
     <td mat-cell *matCellDef="let detail">
       <span class="name">{{ detail.product.name }}</span><br/>
@@ -17,7 +17,7 @@
   </ng-container>
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef class="center">
-      <span i18n>Precio / Unidad</span>
+      <span i18n="product price header|Name of table header for price per product unit">Precio / Unidad</span>
     </th>
     <td mat-cell *matCellDef="let detail" class="center">
       <span>${{ detail.product.price }}</span>
@@ -25,11 +25,12 @@
   </ng-container>
   <ng-container matColumnDef="quantity">
     <th mat-header-cell *matHeaderCellDef class="center"
-      i18n>Unidades</th>
+      i18n="product units header|Name of table header for product units in cart">Unidades</th>
     <td mat-cell *matCellDef="let detail; let i = index" class="center">
       <button type="button" class="decrease"
         mat-button mat-icon-button
-        title="Quitar unidad de '{{ detail.product.name }}'" i18n-title
+        aria-label="Quitar unidad"
+        i18n-aria-label="remove product unit|Label for action button to remove one unit of a product"
         [disabled]="detail.units < 2"
         (click)="onClickDecreaseProductQuantity(i)">
         <mat-icon>remove</mat-icon>
@@ -37,7 +38,8 @@
       {{ detail.units }}
       <button type="button" class="increase"
         mat-button mat-icon-button
-        title="Agregar unidad de '{{ detail.product.name }}'" i18n-title
+        aria-label="Agregar unidad"
+        i18n-aria-label="add product unit|Label for action button to add one unit of a product"
         (click)="onClickIncreaseProductQuantity(i)">
         <mat-icon>add</mat-icon>
       </button>
@@ -45,7 +47,7 @@
   </ng-container>
   <ng-container matColumnDef="total">
     <th mat-header-cell *matHeaderCellDef>
-      <span i18n>Precio</span>
+      <span i18n="product subtotal header|Name of table header for the value of product price x units in cart">Precio</span>
     </th>
     <td mat-cell *matCellDef="let detail">
       <span>${{ detail.product.price * detail.units }}</span>
@@ -56,7 +58,8 @@
     <td mat-cell *matCellDef="let detail; let i = index" class="right">
       <button type="button" class="remove"
         mat-button mat-icon-button
-        title="Quitar todas las unidades de '{{ detail.product.name }}'" i18n-title
+        aria-label="Quitar todas las unidades"
+        i18n-aria-label="remove all product units|Label for action button to remove all units of product in cart"
         color="warn"
         (click)="onClickRemoveProduct(i)">
         <mat-icon>delete</mat-icon>
