--- a/src/app/store/components/receipt-details-table/store-receipt-details-table.component.html
+++ b/src/app/store/components/receipt-details-table/store-receipt-details-table.component.html
@@ -8,7 +8,7 @@
 <table mat-table [dataSource]="dataSource">
   <ng-container matColumnDef="product">
     <th mat-header-cell *matHeaderCellDef>
-      <span i18n>Producto</span>
+      <span i18n="product header|Name of table header for name and code of product">Producto</span>
     </th>
     <td mat-cell *matCellDef="let detail">
       <span class="name">{{ detail.product.name }}</span><br/>
@@ -17,7 +17,7 @@
   </ng-container>
   <ng-container matColumnDef="price">
     <th mat-header-cell *matHeaderCellDef class="center">
-      <span i18n>Precio / Unidad</span>
+      <span i18n="product price header|Name of table header for price per product unit">Precio / Unidad</span>
     </th>
     <td mat-cell *matCellDef="let detail" class="center">
       <span>${{ detail.unitValue }}</span>
@@ -25,14 +25,15 @@
   </ng-container>
   <ng-container matColumnDef="quantity">
     <th mat-header-cell *matHeaderCellDef class="center">
-      <span i18n>Unidades</span>
+      <span i18n="product units header|Name of table header for product units in cart">Unidades</span>
     </th>
-    <td mat-cell *matCellDef="let detail; let i = index" class="center">
-      {{ detail.units }}
+    <td mat-cell *matCellDef="let detail" class="center">
+      <span>{{ detail.units }}</span>
+    </td>
   </ng-container>
   <ng-container matColumnDef="total">
-    <th mat-header-cell *matHeaderCellDef class="center" >
-      <span i18n>Precio</span>
+    <th mat-header-cell *matHeaderCellDef>
+      <span i18n="product subtotal header|Name of table header for the value of product price x units in cart">Precio</span>
     </th>
     <td mat-cell *matCellDef="let detail" class="center">
       <span>${{ detail.unitValue * detail.units }}</span>
