--- a/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.html
+++ b/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.html
@@ -5,12 +5,12 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 mat-dialog-title i18n>Solicitar una compra sin cuenta</h2>
+<h2 mat-dialog-title i18n="Title of dialog prompt to indicate personal info for a guest, temporary login">Solicitar una compra sin cuenta</h2>
 <app-centered-mat-spinner *ngIf="saving$ | async">
 </app-centered-mat-spinner>
 <div [hidden]="saving$ | async">
-  <p i18n>A continuación, por favor indique sus datos de facturación.</p>
-  <p i18n>Usaremos esta información exclusivamente para que su transacción sea más segura.</p>
+  <p i18n="Label to instruct users to input billing information">A continuación, por favor indique sus datos de facturación.</p>
+  <p i18n="Label to hint users their billing information is solely used to secure their transaction">Usaremos esta información exclusivamente para que su transacción sea más segura.</p>
   <form [formGroup]="formGroup" (submit)="onSubmit()">
     <app-person-form formControlName="person">
     </app-person-form>
@@ -18,11 +18,11 @@
     <div class="actions">
       <button mat-button mat-raised-button type="submit"
         color="primary">
-        <span i18n>Aceptar</span>
+        <span i18n="confirm|Label for action button to accept billing information and proceed to cart">Aceptar</span>
       </button>
       <button mat-button mat-raised-button type="button"
         (click)="onCancel()">
-        <span i18n>Cancelar</span>
+        <span i18n="cancel|Label for action button to go back without indicating billing information">Cancelar</span>
       </button>
     </div>
   </form>
