--- a/src/app/store/routes/cart-review/store-cart-review.component.html
+++ b/src/app/store/routes/cart-review/store-cart-review.component.html
@@ -6,12 +6,12 @@
 -->
 
 <div class="cart">
-  <h3 i18n>Detalles de la Compra</h3>
+  <h3 i18n="Title of widget displaying cart contents and details">Detalles de la Compra</h3>
   <app-store-cart-contents-table>
   </app-store-cart-contents-table>
   <mat-divider></mat-divider>
   <div class="subtotal">
-    <span class="label" i18n>Subtotal</span>
+    <span class="label" i18n="subtotal sell value|Label for cart subtotal value (products only)">Subtotal</span>
     <span class="value">${{ cartNetValue$ | async }}</span>
   </div>
 </div>
@@ -19,13 +19,13 @@
   <mat-step #inputStep
     [stepControl]="checkoutRequest.formGroup"
     [editable]="inputEditable">
-    <ng-template matStepLabel i18n>Datos para el pedido</ng-template>
+    <ng-template matStepLabel i18n="Title of form step to input checkout details">Datos para el pedido</ng-template>
     <app-store-checkout-request-form #checkoutRequest
       (request)="stepper.next()">
     </app-store-checkout-request-form>
   </mat-step>
   <mat-step #confirmationStep>
-    <ng-template matStepLabel i18n>Confirmación</ng-template>
+    <ng-template matStepLabel i18n="Title of form step to confirm checkout details">Confirmación</ng-template>
     <app-store-checkout-confirmation
       (confirmed)="onConfirmation()">
     </app-store-checkout-confirmation>
