--- a/src/app/store/routes/catalog/store-catalog.component.html
+++ b/src/app/store/routes/catalog/store-catalog.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<h2 i18n>Catálogo de Productos</h2>
+<h2 i18n="Title of store frontpage">Catálogo de Productos</h2>
 <app-product-filters-panel
   (filtersChanges)="onFiltersChange($event)">
 </app-product-filters-panel>
