polish descriptions+meanings of translatable text
refactored src/text/messages
remove unused i18n functions and constants
give generic meaning and descriptions to some labels and messages
interpolate variables

--- a/src/app/shared/components/image-upload-form/image-upload-form.component.html
+++ b/src/app/shared/components/image-upload-form/image-upload-form.component.html
@@ -23,9 +23,9 @@
     <button mat-button mat-raised-button
       [disabled]="formGroup.invalid || (uploading$ | async)"
       type="submit"
-      i18n="confirm|Label for action button to accept and proceed with upload">Aceptar</button>
+      i18n="confirm|Label for action button to accept and proceed">Aceptar</button>
     <button mat-button mat-raised-button
       type="button" color="warn"
-      i18n="cancel|Label for action button to cancel upload">Cancelar</button>
+      i18n="cancel|Label for action button to cancel and/or stop an operation">Cancelar</button>
   </div>
 </form>
