--- a/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
+++ b/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
@@ -21,7 +21,7 @@
       </mat-select>
       <button matSuffix mat-button mat-icon-button *ngIf="category.value"
         aria-label="Limpiar"
-        i18n-aria-label="(If selected) Label for action button to clear category off filtering conditions"
+        i18n-aria-label="clean up|Label for action button to clear values in form"
         (click)="onClickResetProductCategory($event)">
         <mat-icon>close</mat-icon>
       </button>
