--- a/src/app/shared/components/sell-form/sell-form.component.html
+++ b/src/app/shared/components/sell-form/sell-form.component.html
@@ -46,7 +46,7 @@
 
   <mat-card style="grid-area: details">
     <div class="details-header">
-      <h3 i18n="Title of detailed table for displaying products purchased in sell">Productos de esta Venta</h3>
+      <h3 i18n="Title of table displaying products and details of sell">Productos de esta Venta</h3>
       <button mat-button mat-raised-button type="button"
         color="primary"
         (click)="onClickAddProducts()"
