--- a/src/app/shared/dialogs/images-array/images-array-dialog.component.html
+++ b/src/app/shared/dialogs/images-array/images-array-dialog.component.html
@@ -25,9 +25,9 @@
   <button mat-button mat-raised-button type="button"
     (click)="onClickAccept()"
     mat-dialog-close
-    i18n="confirm|Label for action button to accept and save changes in profile">Aceptar</button>
+    i18n="confirm|Label for action button to accept and proceed">Aceptar</button>
   <button mat-button mat-raised-button type="button"
     color="warn"
     mat-dialog-close
-    i18n="cancel|Label for action button to cancel and discard any changes in profile">Cerrar</button>
+    i18n="cancel|Label for action button to cancel and/or stop an operation">Cancelar</button>
 </div>
