--- a/src/app/store/components/checkout-request-form/store-checkout-request-form.component.html
+++ b/src/app/store/components/checkout-request-form/store-checkout-request-form.component.html
@@ -26,7 +26,7 @@
       mat-button mat-raised-button
       color="accent"
       (click)="onClickRequest()">
-      <span i18n="continue|Label of action button to accept form and proceed to review billing/personal/shipping information">Continuar</span>
+      <span i18n="continue|Label for action button to proceed to next step in a form">Continuar</span>
       <mat-icon>arrow_forward</mat-icon>
     </button>
   </div>
