--- a/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.html
+++ b/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.html
@@ -6,8 +6,8 @@
 -->
 
 <h3 mat-dialog-title i18n="Title of dialog prompt to indicate users that some sort of ID is required">Identificación requerida</h3>
-<p i18n="Label to instruct users that they must log in, register or indicate some personal info to proceed">Para proceder a su carrito, debe iniciar sesión, registrarse, o ingresar sus datos de facturación.</p>
-<p i18n="Label to instruct users to choose one option out of three">Por favor, elija una de las tres a continuación:</p>
+<p i18n="Label to hint user that they must log in, register or indicate some personal info to proceed">Para proceder a su carrito, debe iniciar sesión, registrarse, o ingresar sus datos de facturación.</p>
+<p i18n="Label to instruct user that they choose one option out of three">Por favor, elija una de las tres a continuación:</p>
 <div class="actions">
   <button mat-button mat-raised-button type="button"
     (click)="onClickOption('login')">
@@ -25,4 +25,4 @@
     <mat-icon>remove_moderator</mat-icon>
   </button>
 </div>
-<p class="hint" i18n="Label to hint users to click away from dialog to close it">Si desea cerrar este diálogo, haga clic fuera de él.</p>
+<p class="hint" i18n="Label to hint user that they can click away from current dialog to close it">Si desea cerrar este diálogo, haga clic fuera de él.</p>
