--- a/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
+++ b/src/app/store/dialogs/registration-form/store-registration-form-dialog.component.html
@@ -35,12 +35,12 @@
       <button mat-button mat-raised-button type="submit"
         color="primary"
         [disabled]="formGroup.invalid">
-        <span i18n="confirm|Label for action button to accept and proceed with registration">Aceptar</span>
+        <span i18n="confirm|Label for action button to accept and proceed">Aceptar</span>
       </button>
 
       <button mat-button mat-raised-button type="button"
         (click)="onCancel()">
-        <span i18n="cancel|Label for action button to cancel registration">Cancelar</span>
+        <span i18n="cancel|Label for action button to cancel and/or stop an operation">Cancelar</span>
       </button>
     </div>
   </form>
