--- a/src/app/shared/components/slideshow/slideshow.component.html
+++ b/src/app/shared/components/slideshow/slideshow.component.html
@@ -26,7 +26,7 @@
     <div class="slide-wrapper">
       <img src="assets/img/products/unavailable.png"
         alt="Imagen no disponible"
-        i18n-alt="Label for describing a missing or unavailable image" />
+        i18n-alt="Label to describe a missing or unavailable image" />
     </div>
   </ng-template>
 </div>
