--- a/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.html
+++ b/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.html
@@ -9,8 +9,8 @@
 <app-centered-mat-spinner *ngIf="saving$ | async">
 </app-centered-mat-spinner>
 <div [hidden]="saving$ | async">
-  <p i18n="Label to instruct users to input billing information">A continuación, por favor indique sus datos de facturación.</p>
-  <p i18n="Label to hint users their billing information is solely used to secure their transaction">Usaremos esta información exclusivamente para que su transacción sea más segura.</p>
+  <p i18n="Label to instruct user to input billing information">A continuación, por favor indique sus datos de facturación.</p>
+  <p i18n="Label to hint user that their billing information is solely used to secure their transaction">Usaremos esta información exclusivamente para que su transacción sea más segura.</p>
   <form [formGroup]="formGroup" (submit)="onSubmit()">
     <app-person-form formControlName="person">
     </app-person-form>
@@ -18,11 +18,11 @@
     <div class="actions">
       <button mat-button mat-raised-button type="submit"
         color="primary">
-        <span i18n="confirm|Label for action button to accept billing information and proceed to cart">Aceptar</span>
+        <span i18n="confirm|Label for action button to accept and proceed">Aceptar</span>
       </button>
       <button mat-button mat-raised-button type="button"
         (click)="onCancel()">
-        <span i18n="cancel|Label for action button to go back without indicating billing information">Cancelar</span>
+        <span i18n="cancel|Label for action button to cancel and/or stop an operation">Cancelar</span>
       </button>
     </div>
   </form>
