--- a/src/app/store/routes/cart-review/store-cart-review.component.html
+++ b/src/app/store/routes/cart-review/store-cart-review.component.html
@@ -6,12 +6,12 @@
 -->
 
 <div class="cart">
-  <h3 i18n="Title of widget displaying cart contents and details">Detalles de la Compra</h3>
+  <h3 i18n="transaction details title|Title of widget displaying contents of cart">Detalles de la compra</h3>
   <app-store-cart-contents-table>
   </app-store-cart-contents-table>
   <mat-divider></mat-divider>
   <div class="subtotal">
-    <span class="label" i18n="subtotal sell value|Label for cart subtotal value (products only)">Subtotal</span>
+    <span class="label" i18n="subtotal sell value|Label with cart subtotal value (products only)">Subtotal</span>
     <span class="value">${{ cartNetValue$ | async }}</span>
   </div>
 </div>
